# maestro

./: .gitignore  .mcp.json  AGENTS.md  Cargo.toml  OVERVIEW.md  README.md  claude.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
claude-maestro/: AppConfig.swift  AppEditorSheet.swift  AppLaunchSheet.swift  AppManager.swift  AppRow.swift  AppearanceManager.swift  AppsSidebarView.swift  CapabilitySelector.swift  ClaudeDocManager.swift  CommandConfig.swift  CommandManager.swift  CommitDetailPanel.swift  CommitGraph.swift  CommitRowView.swift  ContentView.swift  GitManager.swift  GitSettingsView.swift  GitTreeView.swift  GraphCanvas.swift  GraphLayoutEngine.swift  HookManager.swift  MCPSelector.swift  MCPServerManager.swift  MCPStatusWatcher.swift  MarketplaceBrowserView.swift  MarketplaceManager.swift  MarketplaceSection.swift  MultiProjectContentView.swift  PluginModels.swift  ProjectContext.swift  QuickAction.swift  QuickActionEditorSheet.swift  QuickActionManager.swift  SidebarView.swift  SkillConfig.swift  SkillManager.swift  SkillSelector.swift  TerminalView.swift  ThemeSwitcherButton.swift  WorkspaceManager.swift  (+2 more)
claude-maestro.xcodeproj/: project.pbxproj
docs/: IME-fix.md  techguide.md
maestro-mcp-server/: Cargo.toml  package-lock.json  package.json
scripts/: launch-tmax.sh  scan-contributors.sh
src/: App.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json  tauri.macos.conf.json
website/: _config.yml  architecture.md  configuration.md  contributing.md  faq.md  features.md  (+4 more)
(+181 files in other folders)
