# Workspace configuration for Claude Maestro
# This allows building both the Tauri app and the MCP server together

[workspace]
resolver = "2"
members = [
    "src-tauri",
    "maestro-mcp-server",
]

[workspace.package]
edition = "2021"
authors = ["lliWcWill"]

[workspace.dependencies]
# Shared dependencies across workspace members
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process", "fs", "io-std", "io-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
thiserror = "2"
chrono = "0.4"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
